<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_black"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.add_movie.AddItemFragment">

    <TextView
        android:id="@+id/add_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_item_page_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/movie_title_placeholder"
        app:helperText=""
        app:helperTextTextColor="@color/red_validation"
        app:startIconDrawable="@drawable/ic_baseline_title_24"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="text"
            android:lines="1"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_release_date_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/movie_release_date_placeholder"
        app:helperText=""
        app:helperTextTextColor="@color/red_validation"
        app:startIconDrawable="@drawable/ic_baseline_date_range_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_movie_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="text"
            android:lines="1"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_rating_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/movie_rating_placeholder"
        app:helperText=""
        app:helperTextTextColor="@color/red_validation"
        app:startIconDrawable="@drawable/ic_baseline_star_24"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_movie_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_description_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/movie_dsc_placeholder"
        app:helperText=""
        app:helperTextTextColor="@color/red_validation"
        app:startIconDrawable="@drawable/ic_baseline_text_fields_24"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="text"
            android:lines="1"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/result_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/insert_image"
        android:src="@mipmap/ic_launcher"
        tools:srcCompat="@tools:sample/avatars" />


    <Button
        android:id="@+id/image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/insert_image"
        android:textSize="12sp" />


    <Button
        android:id="@+id/update_item_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/update_movie_btn"
        android:textSize="12sp" />

</LinearLayout>